[package]
name = "httptun"
version = "0.1.0"
authors = ["AusCyber <willp@outlook.com.au>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
http_parser = "0.0.2"
anyhow = "1.0.34"

[[bin]]
name = "server"
path = "src/server/bin/main.rs"

[[bin]]
name = "client"
path = "src/client/bin/main.rs"
